# django-rest-batteries

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
example/: manage.py
example/example/: settings.py  urls.py
example/store/: admin.py  choices.py  models.py  services.py  urls.py  views.py
example/store/fixtures/: store.json
example/store/migrations/: 0001_initial.py
example/store/serializers/: __init__.py  request.py  response.py
rest_batteries/: errors_formatter.py  exception_handlers.py  generics.py  mixins.py  views.py  viewsets.py
tests/: conftest.py  factories.py  models.py  serializers.py  settings.py  test_generics.py  test_views.py  test_viewsets.py  utils.py
