[tool.poetry]
name = "django-rest-batteries"
version = "1.3.0"
description = "Build clean APIs with DRF faster"
authors = ["Define Impossible <hi@defineimpossible.io>"]
packages = [
    { include = "rest_batteries" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/defineimpossible/django-rest-batteries"
repository = "https://github.com/defineimpossible/django-rest-batteries"
keywords = [
    "django rest framework",
    "drf",
    "django",
    "batteries",
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.5"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.1"
pytest-django = "^3.10.0"
django-debug-toolbar = "^2.2"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.2.0"
factory-boy = "^2.12.0"
isort = "^5.2.2"
black = "^19.10b0"
brunette = "^0.1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
