[tool.poetry]
name = "django-rest-batteries"
version = "1.3.0"
description = "Build clean APIs with DRF faster"
authors = ["Define Impossible <hi@defineimpossible.io>"]
packages = [
    { include = "rest_batteries" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/defineimpossible/django-rest-batteries"
repository = "https://github.com/defineimpossible/django-rest-batteries"
keywords = [
    "django rest framework",
    "drf",
    "django",
    "batteries",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
django-debug-toolbar = "^2.2"
factory-boy = "^3.2.1"
isort = "^5.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
skip = [
    ".direnv",
    ".tox",
    ".venv",
    "migrations",
]

# Vertical hanging indent:
multi_line_output = 3
include_trailing_comma = true

line_length = 88
known_third_party = "rest_batteries"

[tool.pytest.ini_options]
# Django configuration:
# https://pytest-django.readthedocs.io/en/latest/
DJANGO_SETTINGS_MODULE = "tests.settings"
