[tool.poetry]
name = "django-rest-batteries"
version = "1.4.1"
description = "Build clean APIs with DRF faster"
authors = ["Define Impossible <hi@defineimpossible.io>"]
packages = [
    { include = "rest_batteries" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/defineimpossible/django-rest-batteries"
repository = "https://github.com/defineimpossible/django-rest-batteries"
keywords = [
    "django rest framework",
    "drf",
    "django",
    "batteries",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"
djangorestframework = ">=3.12.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"

[tool.poetry.group.code-quality.dependencies]
black = "^23.7.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = true

[tool.ruff]
select = ["E", "F", "I"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]
line-length = 99

[tool.pytest.ini_options]
# Django configuration:
# https://pytest-django.readthedocs.io/en/latest/
DJANGO_SETTINGS_MODULE = "tests.settings"
